Version 1.6.1 - Canala
-----------------------------
- Fixes of several bugs:
  - #3138 A bug of counting modules in page
  - #3582 (CMS 1.6) Fatal Error in contentoperations.inc.php    
  - #3589 Missing "Forgot Password?" on default template
  - #3591 Default group "Editor" has no permission to edit a page 
  - #3601 Creating new user fails, doesn't accept "-" in email address
  - #3608 Edit icon of pages is shown even if no permissions to edit that page 
  - #3612 {content} passes params to Module -> results in errormessage 
  - #3626 Fixes issue with php 4.x in multicontent
  - #3636 Global Settings -> Advanced Setup -> Basic Properties 
  - Fixes issue with php 5.0.5 in content operations
  
Version 1.6 - New Caledonia
-----------------------------
- Fixes of several bugs: 
  - #2786 Bulk page changes don't show messages
  - #2831 Upgrade process continue even if database is empty
  - #3040 no external view after moving pages up and down (and deleting pages)
    in listcontent
  - #3123 Installer overly restricts account names
  - #3179 Ability to show when news items were last updated
  - #3189 check if udt exists
  - #3190 Error with link rel="canonical"
  - #3257 Non-admin users can create admin users
  - #3451 typos in plugins page_image and page_attr
  - Drop all assign_by_ref in Installer
  - Missing $frontendlang in siteprefs, thanks to jce76350
  - Fixed lot of anchor issues (hoppe one for all)
  - Fixed issue with breadcrumbs in admin theme
  - Fixed issue with encoding entities in cms_selflink tag
  - Removed the javascript in the changegroupperms and changegroupassign
    stuff, and replaced it with a filter button.
  - More...

- Feature Requests:
  - #2605 adding a 'forgot password' submission on the login panel  
  - #3048 News: Only show expiration-date when checkbox is set
  
- Core additions:
  - Ability to set a page as the 404 error page.  Replaces
    the existing custom 404 stuff to allow for more
    flexibility.