@@ -46,7 +46,7 @@ $lastname = "";
 if (isset($_POST["lastname"])) $lastname = cleanValue($_POST["lastname"]);
 
 $email = "";
-if (isset($_POST["email"])) $email = cleanValue($_POST["email"]);
+if (isset($_POST["email"])) $email = trim($_POST["email"]);
 
 $adminaccess = 1;
 if (!isset($_POST["adminaccess"]) && isset($_POST["edituser"])) $adminaccess = 0;
@@ -113,7 +113,7 @@ if ($access) {
 		if (!empty($email) && !is_email($email))
 		  {
 		    $validinfo = false;
-		    $error .= '<li>'.lang('invalidemail').'</li>';
+		    $error .= '<li>'.lang('invalidemail').': '.$email.'</li>';
 		  }
 
 		if ($validinfo) {
